--- a/src/main/resources/templates/new_meal.html
+++ b/src/main/resources/templates/new_meal.html
@@ -108,7 +108,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="mb-3 contact-occupation">
-                                                <h5><label for="user">Select User</label></h5>
+                                                <h5><label for="user">Select Meal Serve Time</label></h5>
                                                 <select th:field="*{serveTime}"
                                                         id="user"
                                                         class="select2 form-control"
